Prevent out scrollbars
Scroll only content

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
 #root {
   max-width: 1280px;
+  height: 100vh;
   margin: 0 auto;
+  overflow: hidden;
   padding: 2rem;
   text-align: center;
+  box-sizing: border-box;
 }
 
 button {
