--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html,
+body {
+  overflow: hidden;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
